(#11),(#13): improved styling, fixed wrong collapsing of groups with same name

--- a/application/layouts/one-column/default.theme/css/one-column.css
+++ b/application/layouts/one-column/default.theme/css/one-column.css
@@ -1,5 +1,18 @@
+body {
+   background-color: #f5f5f5;
+}
 .one-column-layout,
 .one-column-layout > * {
    position: relative;
    margin: 0;
+   background-color: #f5f5f5;
+}
+.row {
+   margin-left: 0;
+   margin-right: 0;
+}
+
+.col {
+   padding-left: 0;
+   padding-right: 0;
 }
